<resources>
    <string name="app_name">Agam.in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_properties">My Properties</string>
    <string name="leads">Leads</string>
    <string name="title_activity_app_starter">AppStarterActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_property">Create Property</string>
    <string name="edit_property">Edit Property</string>
    <string name="shortlists">Shortlists</string>
    <string name="home">Home</string>
    <string name="listing">Listing</string>
    <string name="profile">Profile</string>
    <string name="property_name_hint">Building/Apartment/Society Name</string>
    <string name="property_des_hint">Describe Property Description</string>
    <string name="property_details">Property Details</string>
    <string name="property_type">Property Type</string>
    <string name="bhk">BHK</string>
    <string name="furnishing_type">Furnishing Type</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="pricing_details_u"><u>Pricing Details</u></string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="furnished">Furnished</string>
    <string name="semi_furnished">Semi Furnished</string>
    <string name="un_furnished">Unfurnished</string>
    <string name="monthly_maintenance">Monthly Maintenance</string>
    <string name="location_details">Location Details</string>
    <string name="city">City</string>
    <string name="locality">Enter area/locality</string>
    <string name="looking_to">Looking To</string>
    <string name="apartment">Apartment</string>
    <string name="independent_house">Independent House</string>
    <string name="other">Other</string>
    <string name="studio">Studio</string>
    <string name="farm_house">Farm House</string>
    <string name="villa">Villa</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="lease">Lease</string>
    <string name="sell">Sell</string>
    <string name="built_up_area">Built Up Area(Sq. ft.)</string>
    <string name="_5_above_bhk">5+ BHK</string>
    <string name="_5_bhk">5 BHK</string>
    <string name="_4_bhk">4 BHK</string>
    <string name="_3_bhk">3 BHK</string>
    <string name="_2_bhk">2 BHK</string>
    <string name="_1_bhk">1 BHK</string>
    <string name="_1_rk">1 RK</string>
    <string name="covered_parking">Covered Parking</string>
    <string name="open_parking">Open Parking</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="available_from">Available From</string>
    <string name="family">Family</string>
    <string name="bachelors">Bachelors</string>
    <string name="add_furnishing_amenities">+ Add Furnishing/Amenities</string>
    <string name="maintenance_charges_per_month">Maintenance (per month)</string>
    <string name="maintenance_charges">Maintenance Charges</string>
    <string name="include_in_rent">Include in rent</string>
    <string name="separate">Separate</string>
    <string name="number_of_months_rent_months">Number of months (rent * months)</string>
    <string name="security_deposit">₹ Security Deposit</string>
    <string name="preferred_tenant_type">Preferred Tenant Type</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="flat_furnishings">Flat Furnishings</string>
    <string name="society_amenities">Society Amenities</string>
    <string name="women_only">Women Only</string>
    <string name="men_only">Men Only</string>
    <string name="select_your_preference_for_bachelors">Select your preference for bachelors</string>
    <string name="open_for_both">Open for Both</string>
    <string name="post_property">Post Property</string>
    <string name="posting">Posting...</string>
    <string name="save_changes">Save Changes</string>
    <string name="saving">Saving...</string>
    <string name="back">back</string>
    <string name="hamburger">hamburger</string>
    <string name="sort">sort</string>
    <string name="favourite">favourite</string>
    <string name="overview"><u>OverView</u></string>
    <string name="amenities_u"><u>Amenities</u></string>
    <string name="property_name">Property Name</string>
    <string name="street_name_locality_city">street name, locality, city.</string>
    <string name="price_maintenance_month">Price + Maintenance / Month</string>
    <string name="bhk_property_type_un_furnished_1000_sq_ft">bhk property type | un-furnished | 1000 sq.ft.</string>
    <string name="property_image">Property Image</string>
    <string name="filters">Filters</string>
    <string name="open_shortlists">Open shortlists</string>
    <string name="enter_house_no_street_name">Enter house no, street name</string>
    <string name="add_property_images">+ Add property Images</string>
    <string name="image_of_an_property">image of an property</string>
    <string name="no_description">No Description Available</string>
    <string name="delete_image">delete image</string>
    <string name="no_amenities_available">No Amenities Available</string>
    <string name="included">included</string>
    <string name="preferred_tenant">Preferred Tenant</string>
    <string name="pet_allowed">Pet Allowed</string>
    <string name="locality_city">locality, city</string>
    <string name="bathroom">Bathroom</string>
    <string name="posted_on">Posted On</string>
    <string name="i_m_interested">I\'m Interested</string>
    <string name="shortlist">Shortlist</string>
    <string name="view_contact_number">View Contact Number</string>
    <string name="search_this">search this</string>
    <string name="history_icon">history icon</string>
    <string name="search_city_locality">search city, locality</string>
    <string name="search_properties">Search Properties</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="budget">Budget ₹</string>
    <string name="all">All</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="recent_searches">Recent Searches…</string>
    <string name="please_resolve_all_the_errors_msg">Please resolve all the errors to continue</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="added_at">at:</string>
    <string name="add_property">Add Property</string>
    <string name="active">ACTIVE</string>
    <string name="inactive">INACTIVE</string>
    <string name="property_action">property action</string>
    <string name="property_summary_header">%1$s (%2$s)</string>
    <string name="property_summary_body1">%1$s, %2$s</string>
    <string name="property_summary_footer">%1$s | %2$s | %3$d sq.ft.</string>
    <string name="editc">Edit</string>
    <string name="deleteC">Delete</string>
    <string name="price">Price</string>
    <string name="property_price">₹ %1$d</string>
    <string name="take_live_photos">Take live photos</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="or">OR</string>
    <string name="number_of_images">%1$d+ Images</string>
    <string name="property_images">Property Images</string>
    <string name="increment">increment</string>
    <string name="decrement">decrement</string>
    <string name="add_more">+ Add More</string>
    <string name="area_with_sq_ft">%1$d sq.ft.</string>
    <string name="pre_for_suff">%1$s for %2$s</string>
    <string name="email">email</string>
    <string name="email_c">Email</string>
    <string name="phone">phone</string>
    <string name="phone_c">Phone</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="change_image">Change Image</string>
    <string name="save">Save</string>
    <string name="_9987654321">9987654321</string>
    <string name="admin_gmail_com">andmin@gmail.com</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="_9988776655">9988776655</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="customer_support">Customer Support</string>
    <string name="welcome_nback">Welcome \nBack</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signing_in">Signing In...</string>
    <string name="create_n_account">Create \nAccount</string>
    <string name="user_name">User Name</string>
    <string name="continue_where_you_left">Continue where you left</string>
    <string name="no_recent_searches_found">No Recent Searches Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="post_your_properties_to_see_the_magic">Post Your Properties To See The Magic</string>
    <string name="no_properties_found">No Properties Found</string>
    <string name="view_owner_details">View Owner Details</string>
    <string name="contact_details"><u>Contact Details</u></string>
    <string name="not_available">Not Available</string>
    <string name="view_contact_details">View Contact Details</string>
    <string name="open_lead">open lead</string>
    <string name="icon_view">icon view</string>
    <string name="title">Title</string>
    <string name="sub_title">sub title</string>
    <string name="_999">999+</string>
    <string name="your_activity_as_a_landlord">Your activity as a <u><b>Landlord</b></u></string>
    <string name="your_activity_as_a_tenant">Your activity as a <u><b>Tenant</b></u></string>
    <string name="hi">Hi %1$s</string>
    <string name="no_leads_found">No Leads Found</string>
    <string name="minimum_3_characters_required_to_search">minimum 3 characters required to search</string>
    <string name="image_view">image view</string>
    <string name="bottom_sheet_drag_handler">Bottom Sheet Drag Handler</string>
    <string name="clear_filter"><u>clear filters</u></string>
    <string name="menu_icon">Menu Icon</string>
    <string name="description">Description:</string>
    <string name="recommended_properties">Recommended Properties</string>

    <!-- ShortCut ID & Label -->
    <string name="search_shortcut">search property</string>
    <string name="leads_shortcut">Leads</string>
    <string name="create_property_shortcut">Create Property</string>
    <string name="welcome_msg">welcome user</string>

</resources>